improving tenantService